# firstrade-mcp

./: .gitignore  Cargo.toml  README.md
src/: main.rs  server.rs  url.rs  utils.rs
