[package]
name = "firstrade-mcp"
description = "Firstrade Model Context Protocol (MCP) Server"
version = "0.0.1"
edition = "2024"
authors = ["Morris Tai <morristai01@gmail.com>"]
license = "Apache-2.0"
repository = "https://github.com/morristai/firstrade-mcp"
readme = "README.md"

[dependencies]
rmcp = { version = "0.5.0", features = ["server", "transport-io"] }
anyhow = "1"
tokio = { version = "1.47", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
schemars = "1.0.4"
reqwest = { version = "0.12.23", features = ["json"] }
once_cell = "1.21.3"
